# ChangeLog for dev-python/traits
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/traits/ChangeLog,v 1.40 2013/08/25 08:45:55 jlec Exp $

  25 Aug 2013; Justin Lecher <jlec@gentoo.org> traits-4.3.0-r1.ebuild:
  add missing distutils-r1_python_prepare_all and use HTML_DOCS

  14 May 2013; Ian Delaney <idella4@gentoo.org> -traits-3.6.0.ebuild,
  -traits-4.0.0.ebuild, -traits-4.1.0.ebuild, -traits-4.2.0.ebuild:
  drop old

*traits-4.3.0-r1 (11 Apr 2013)

  11 Apr 2013; Ian Delaney <idella4@gentoo.org> +traits-4.3.0-r1.ebuild:
  revbump, migration -> distutils-r1

*traits-4.3.0 (03 Apr 2013)

  03 Apr 2013; Patrick Lauer <patrick@gentoo.org> +traits-4.3.0.ebuild:
  Bump

  06 Dec 2012; Sébastien Fabbro <bicatali@gentoo.org> traits-4.2.0.ebuild:
  Keyword amd64-linux and x86-linux

  20 Nov 2012; Agostino Sarubbo <ago@gentoo.org> traits-4.1.0.ebuild:
  Stable for x86, wrt bug #418923

  06 Nov 2012; Ian Delaney <idella4@gentoo.org> traits-4.2.0.ebuild:
  rem of whitespace

  06 Nov 2012; Ian Delaney <idella4@gentoo.org> traits-4.2.0.ebuild:
  PYTHONPATH set in test phase subsequent to Bug #420055

  06 Nov 2012; Ian Delaney <idella4@gentoo.org> traits-4.1.0.ebuild:
  PYTHONPATH set in test phase, fixes Bug #420055

*traits-4.2.0 (09 Oct 2012)

  09 Oct 2012; Patrick Lauer <patrick@gentoo.org> +traits-4.2.0.ebuild:
  Bump

  22 Aug 2012; Michael Weber <xmw@gentoo.org> traits-4.1.0.ebuild:
  ppc stable (bug 418923).

  01 Jun 2012; Agostino Sarubbo <ago@gentoo.org> traits-4.1.0.ebuild:
  Stable for amd64, wrt bug #418923

  21 Feb 2012; Patrick Lauer <patrick@gentoo.org> traits-3.6.0.ebuild,
  traits-4.0.0.ebuild, traits-4.1.0.ebuild:
  Restricting pypy

*traits-4.1.0 (17 Jan 2012)

  17 Jan 2012; Sébastien Fabbro <bicatali@gentoo.org> +traits-4.1.0.ebuild:
  Version bump

  04 Aug 2011; Sébastien Fabbro <bicatali@gentoo.org> traits-4.0.0.ebuild:
  Typo

*traits-4.0.0 (03 Aug 2011)
