@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/traits/traits-4.3.0-r1.ebuild,v 1.2 2013/08/25 08:45:55 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/traits/traits-4.3.0-r1.ebuild,v 1.3 2013/08/25 08:47:38 jlec Exp $
 
 EAPI=5
 
@@ -25,7 +25,8 @@ DEPEND="dev-python/setuptools[${PYTHON_USEDEP}]
 DOCS=( docs/*.txt )
 
 python_prepare_all() {
-	sed -i -e "s/'-O3'//g" setup.py
+	sed -i -e "s/'-O3'//g" setup.py || die
+	distutils-r1_python_prepare_all
 }
 
 python_compile_all() {
@@ -39,7 +40,7 @@ python_test() {
 
 python_install_all() {
 	use doc && HTML_DOCS=( docs/build/html/. )
-	distutils-r1_python_prepare_all
+	distutils-r1_python_install_all
 
 	if use examples; then
 		insinto /usr/share/doc/${PF}
