@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/traits
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/traits/ChangeLog,v 1.40 2013/08/25 08:45:55 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/traits/ChangeLog,v 1.41 2013/08/25 08:47:38 jlec Exp $
+
+  25 Aug 2013; Justin Lecher <jlec@gentoo.org> traits-4.3.0-r1.ebuild:
+  add missing distutils-r1_python_install_all
 
   25 Aug 2013; Justin Lecher <jlec@gentoo.org> traits-4.3.0-r1.ebuild:
   add missing distutils-r1_python_prepare_all and use HTML_DOCS
